# pyHacks

./: LICENSE  README.md  pyHacks.sublime-project  pyproject.toml  requirements.txt
src/: Shared.py
src/init/: py.py  subl.py
src/monitor/: system.py
src/pyHacks/: Convert.py  Safari.py  Settings.py  Shared.py
src/pyHacks/alias/: pycharm.py
src/pyHacks/init/: py.py  subl.py
src/pyHacks/jobs/: insomnia.py
src/pyHacks/monitor/: system.py
