[project]
name = "pyHacks"
version = "0.0.1"
dependencies = []


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
init_subl_project = "init.subl:initProject_main"
init_py_project = "init.py:init_py_project"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.pyright]
pythonVersion = '3.9'
venvPath = ''
venv = ''
