[project]
name = "pyHacks"
version = "0.1.0"
dependencies = ["psutil",
"virtualenv"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
init-subl-project = "pyHacks.init.subl:initProject_main"
init-py-project = "pyHacks.init.py:init_py_project"

pid-finder = "pyHacks.monitor.system:pidfinder_main"
pid-killer = "pyHacks.monitor.system:pidKiller_main"

setScreenSaver = "pyHacks.Settings:setScreenSaver_main"

playdateify_mp3 = "pyHacks.Convert:playdateify_mp3_main"

pycharm = "pyHacks.alias.pycharm:main"

insomnia = "pyHacks.jobs.insomnia:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.pyright]
pythonVersion = '3.9'
venvPath = ''
venv = ''
